--- a/app/views/current/views/check-answers-project-eligibility.html
+++ b/app/views/current/views/check-answers-project-eligibility.html
@@ -11,7 +11,7 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-full">
 
     <h1 class="govuk-heading-l">Check your answers</h1>
 
@@ -19,7 +19,7 @@
 
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-half">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Type of business
         </dt>
         <dd class="govuk-summary-list__value">
@@ -32,7 +32,7 @@
         </dd>
       </div>
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Legal status
         </dt>
         <dd class="govuk-summary-list__value">
@@ -45,7 +45,7 @@
         </dd>
       </div>
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Located in England
         </dt>
         <dd class="govuk-summary-list__value">
@@ -58,7 +58,7 @@
         </dd>
       </div>
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Rented, leased or tenanted
         </dt>
         <dd class="govuk-summary-list__value">
@@ -72,7 +72,7 @@
       </div>
       {% if data['tenancy'] == "yes" %}
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Tenancy extends beyond six years
         </dt>
         <dd class="govuk-summary-list__value">
@@ -87,7 +87,7 @@
 
       {% endif %}
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Estimated project costs
         </dt>
         <dd class="govuk-summary-list__value">
@@ -100,7 +100,7 @@
         </dd>
       </div>
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Able to pay remaining costs
         </dt>
         <dd class="govuk-summary-list__value">
@@ -113,7 +113,7 @@
         </dd>
       </div>
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Will pay with public money
         </dt>
         <dd class="govuk-summary-list__value">
@@ -126,7 +126,7 @@
         </dd>
       </div>
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Project started
         </dt>
         <dd class="govuk-summary-list__value">
