--- a/app/views/current/views/check-answers-theme-eligibility.html
+++ b/app/views/current/views/check-answers-theme-eligibility.html
@@ -11,7 +11,7 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-full">
 
     <h1 class="govuk-heading-l">Check your answers</h1>
 
@@ -19,7 +19,7 @@
 
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-half">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Project items
         </dt>
         <dd class="govuk-summary-list__value">
@@ -47,7 +47,7 @@
         </dd>
       </div>
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Project name
         </dt>
         <dd class="govuk-summary-list__value">
@@ -60,7 +60,7 @@
         </dd>
       </div>
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Project summary
         </dt>
         <dd class="govuk-summary-list__value">
@@ -73,7 +73,7 @@
         </dd>
       </div>
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Planning permission required
         </dt>
         <dd class="govuk-summary-list__value">
@@ -87,7 +87,7 @@
       </div>
       {% if data['planning-required'] == "yes" %}
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Planning permission obtained
         </dt>
         <dd class="govuk-summary-list__value">
@@ -102,7 +102,7 @@
       {% endif %}
 
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Abstraction licence required
         </dt>
         <dd class="govuk-summary-list__value">
@@ -116,7 +116,7 @@
       </div>
       {% if data['abstraction-required'] == "yes" %}
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Abstraction licence obtained
         </dt>
         <dd class="govuk-summary-list__value">
@@ -131,7 +131,7 @@
       {% endif %}
       {% if data['abstraction-variation'] == "yes" %}
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Abstraction variation required
         </dt>
         <dd class="govuk-summary-list__value">
