--- a/app/views/current/views/collaboration.html
+++ b/app/views/current/views/collaboration.html
@@ -16,11 +16,33 @@
       <form class="form" action="productivity" method="post">
 
         <div class="govuk-form-group">
-          <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="collaboration">
-              Will you supply any other farms with water? If so, how many?
-            </label>
-          </h1>
-          <textarea class="govuk-textarea" id="collaboration" name="collaboration" rows="8" aria-describedby="collaboration-hint">{{ data['collaboration'] }}</textarea>
+          <fieldset class="govuk-fieldset" aria-describedby="collaboration-hint">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <h1 class="govuk-fieldset__heading">
+                How many other farms will you supply with water?
+              </h1>
+            </legend>
+            <div class="govuk-radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="collaboration" name="collaboration" type="radio" value="none">
+                <label class="govuk-label govuk-radios__label" for="collaboration">
+                  None
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="collaboration-2" name="collaboration" type="radio" value="1-3">
+                <label class="govuk-label govuk-radios__label" for="collaboration-2">
+                  1 - 3
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="collaboration-3" name="collaboration" type="radio" value="4 or more">
+                <label class="govuk-label govuk-radios__label" for="collaboration-3">
+                  4 or more
+                </label>
+              </div>
+            </div>
+          </fieldset>
         </div>
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
