--- a/app/views/current/views/check-answers-contact-details.html
+++ b/app/views/current/views/check-answers-contact-details.html
@@ -5,7 +5,7 @@ Check your answers
 {% endblock %}
 
 {% block beforeContent %}
-<a class="govuk-back-link" onclick="history.back()" href="#">Back</a>
+<a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
